src/objects/SubItemBoard__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemNDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item (Non Display Material)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Item__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Non Display Material</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipName>Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramType__c</fullName>
        <label>Program Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DY</fullName>
                </value>
                <value>
                    <fullName>PY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pad</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SubItem Board</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SubItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubItem Boards</pluralLabel>
    <recordTypes>
        <fullName>Board</fullName>
        <active>true</active>
        <label>Board</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pad</fullName>
        <active>false</active>
        <label>Pad</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>